SJRK-145: further refining CSS fix to work well with other pages
all of the "background: var()" references were changed to 
"background-color: var()" as Edge was not displaying the colours 
properly for some reason. Couldn't find any info on this online. Edge at 
minimum width doesn't look right, but this is unavoidable: 
https://developer.microsoft.com/en-us/microsoft-edge/platform/issues/13621468/

--- a/src/css/storyTelling.css
+++ b/src/css/storyTelling.css
@@ -78,7 +78,7 @@ fieldset ul {
 }
 
 .sjrk-storyTelling-block-alternative-content input, .sjrk-storyblock-image-description, .sjrk-storyblock-image-alt-text {
-    background: var(--site-grey);
+    background-color: var(--site-grey);
 }
 
 .sjrk-storyTelling-block-alternative-content .sjrk-storyblock-heading {
@@ -192,7 +192,7 @@ fieldset ul {
 
 .sjrk-storyblock-image-preview-container {
     margin: 0 auto;
-    background: var(--site-grey);
+    background-color: var(--site-grey);
 }
 
 .sjrk-storyblock-image-preview[src=""], .sjrk-storyblock-image-preview:not([src]) {
@@ -249,7 +249,7 @@ fieldset ul {
 
 .sjrk-storyTelling-story-editor-content {
     min-height: 20rem;
-    background: var(--site-grey);
+    background-color: var(--site-grey);
     margin: 1rem 0;
     border-top: 2px solid;
     border-bottom: 2px solid;
@@ -372,7 +372,7 @@ fieldset ul {
     }
 
     .sjrk-pageBody-container {
-        padding: 2rem 0;
+        padding: 0.5rem;
     }
 
     .sjrk-storyTelling-browser-stories.grid .sjrk-storyTelling-browser-story-container {
